# my_server_actix_web

./: Cargo.toml  README.md  buys.bat
.github/workflows/: clippy.yml
proptest-regressions/: tw_assignment.txt
src/: README..md  lib.rs  main.rs  main_0_hello_template.rs  main_1_hello.rs  main_2_app_state_simple.rs  main_3_app_state_mutable_global.rs  main_4_1_extractors_path.rs  main_4_2_extractors_query_json_form.rs  main_4_3_extractors_app_state.rs  main_5_HttpResponse_Responder_aka_HttpReq_handlers.rs  main_6_1_middleware_basics.rs  main_6_2_default_headers_middleware.rs  main_6_3_Error_Handlers_middleware.rs  main_6_4_logging_middleware.rs  main_6_5_user_sessions_middleware.rs  main_7_1_Error_Logging.rs  main_7_Errors.rs  main_8_0_Testing.rs  main_8_1_Testing_Streams.rs  main_x_1_middleware_basics.rs  main_x_Error_Handlers_middleware.rs  main_x_cookies__user_sessions_middleware.rs  main_x_default_headers_middleware.rs  notes.md  temp.md  tw__readme.md  tw_ai_pre_commit_hook.txt  tw_assignment.md  tw_assignment.rs  tw_assignment_specs.md  tw_buys.bat  tw_design.md  tw_known_issues.md  tw_load_test.ps1  tw_main.rs  tw_openapi.yaml  tw_perf_testing.md
